@@ -28,6 +28,7 @@
 * Tweak - Improve webhook status related messages on the settings page.
 * Update - Prevent editing of orders awaiting payment capture.
 * Add - Introduce locking and unlocking in refund flow to prevent double refund due to race condition.
+* Dev - Add a GitHub Action workflow to run QIT E2E Integrations tests.
 * Fix - Check billing interval and period to set in mandate options.
 * Fix - Check order currency on pay for order page to display supported payment methods.
 
